--- a/package.json
+++ b/package.json
@@ -23,10 +23,24 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.9.0",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/file": "^4.12.0",
+    "@ionic-native/file-transfer": "^4.12.0",
+    "@ionic-native/media-capture": "^4.12.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
+    "@ionic-native/streaming-media": "^4.12.0",
     "@ionic/storage": "2.1.3",
+    "cordova-browser": "5.0.4",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-media-capture": "^3.0.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-streaming-media": "^2.1.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -34,14 +48,26 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.10",
+    "@ionic/app-scripts": "^3.1.11",
     "typescript": "~2.6.2",
     "ws": "3.3.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-camera": {}
-    }
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-media-capture": {},
+      "cordova-plugin-streaming-media": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "browser"
+    ]
   }
 }
